# fastai

./: .devcontainer.json  .gitattributes  .gitconfig  .gitignore  .gitmodules  .travis.yml  AI_Datablock.py  AUTHORS.md  CHANGELOG.md  CHANGES.md  CLA.md  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Creating_doctest.ipynb  DocTestDemo.ipynb  Dockerfile  HISTORY.md  MANIFEST  MANIFEST.in  Makefile  README.md  README.rst  Tests SGD.ipynb  azure-pipelines.yml  basic_data.py  cloudbuild.yaml  conftest.py  dataset.py  debug is_test.ipynb  distributed_utils.py  docker-compose.fork.yml  docker-compose.fork.yml.template  docker-compose.yml  docs  download_checks.py  environment-cpu.yml  environment-nopytorch.yml  environment-old.yml  environment-win.yml  (+14 more)
.github/: CODEOWNERS  FUNDING.yml  issue_reply_templates.md  issue_template.md  pull_request_template.md  saved_replies.md
conda/: meta.yaml
courses/: 00-DO-NOT-USE-WITH-FASTAI-1.0.x.txt
data/: .gitignore  adult_sample.tgz  human_numbers.tgz  imdb_sample.tgz  mnist_sample.tgz  mnist_tiny.tgz
dev/: git.md  style.md
disabled/: 70b_callback.neptune.ipynb  74_callback.azureml.ipynb
doc/: Makefile  api.rst  conf.py  index.rst  make.bat  quick_start.rst  readme.rst
docs/: .gitignore  01a_core.utils.html  01b_core.dispatch.html  01c_core.transform.html  03a_layers.html  09a_vision.data.html  09b_vision.utils.html  13a_metrics.html  14a_callback.data.html  15a_vision.models.unet.html  20a_distributed.html  CNAME  Expand md to html.ipynb  Gemfile  README.md  _config.yml  abbr.md  anatomy.adoc  anatomy.md  app_examples.html  applications.html  augmentation.html  basic_data.html  basic_train.html  callback.captum.html  callback.core.html  callback.cutmix.html  callback.data.html  callback.fp16.html  callback.hook.html  callback.html  callback.mixup.html  callback.neptune.html  callback.preds.html  callback.progress.html  callback.rnn.html  callback.schedule.html  callback.tensorboard.html  callback.tracker.html  callback.training.html  (+184 more)
docs-dev/: README.md  abbr.md  develop.md  release.md  style.md  test.md
docs_src/: .gitattributes  .gitignore  .htaccess  CNAME  Gemfile  README.md  _config.yml  applications.ipynb  basic_data.ipynb  basic_train.ipynb  callback.ipynb  callbacks.csv_logger.ipynb  callbacks.fp16.ipynb  callbacks.general_sched.ipynb  callbacks.hooks.ipynb  callbacks.ipynb  callbacks.lr_finder.ipynb  callbacks.mem.ipynb  callbacks.misc.ipynb  callbacks.mixup.ipynb  callbacks.one_cycle.ipynb  callbacks.rnn.ipynb  callbacks.tensorboard.ipynb  callbacks.tracker.ipynb  callbacks.tracking.ipynb  collab.ipynb  conftest.py  core.ipynb  data_block.ipynb  datasets.ipynb  dev-setup.html  error.html  fastai_typing.ipynb  gen_doc.convert2html.ipynb  gen_doc.gen_notebooks.ipynb  gen_doc.ipynb  gen_doc.nbdoc.ipynb  gen_doc.nbtest.ipynb  imgs  index.ipynb  (+46 more)
examples/: README.md  ULMFit.ipynb  camvid_tiny.tgz  cifar.ipynb  collab.ipynb  data  dogs_cats.ipynb  imdb_classification.ipynb  movie_lens.ipynb  rossmann.ipynb  tabular.ipynb  text.ipynb  train_cifar.py  train_imagenet.py  train_imagenette.py  train_imagenette_adv.py  train_mnist.py  train_wt103.py  vae.ipynb  vision.ipynb
fastai/: .data_block.py.swo  .~core.py  LSUV.py  __init__.py  _modidx.py  _nbdev.py  _pytorch_doc.py  accelerate.py  adaptive_softmax.py  basic_data.py  (+57 more)
(+1265 files in other folders)
